# mcp-blindess-detection

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  METHODOLOGY.md  PRODUCTION_CLIENT_TESTING.md  RELATED_WORK.md  RESPONSIBLE_DISCLOSURE.md  THREAT_MODEL.md
experiments/: runner.py
experiments/configs/: exp_claude_desktop.json  exp_combined.json  exp_combined_control.json  exp_control.json  exp_h2_isolated.json  exp_h3_direct.json  exp_h3_encoded.json  exp_h3_false_error.json  exp_h3_multistep.json  exp_h3_social.json  exp_name_collision.json
experiments/prompts/: multi_tool_query.txt  weather_query.txt
src/: __init__.py
src/analysis/: __init__.py  aggregate.py  compliance.py  delta.py  events.py
src/client/: __init__.py  __main__.py  agent.py
src/gui/: __init__.py  __main__.py  app.py  config.py
src/proxy/: __init__.py  __main__.py  hasher.py  logger.py  parser.py  proxy.py
src/servers/: __init__.py  __main__.py  combined.py  config.py  control_clean.py  control_strict.py  echo.py  name_collision.py  response_injection.py  shadow_params.py
tests/: conftest.py  test_adapter_logger.py  test_agent.py  test_agent_timeouts.py  test_aggregate.py  test_client_main.py  test_compliance.py  test_config.py  test_coverage_gaps.py  test_delta.py  test_events.py  test_final_gaps.py  test_hasher.py  test_integration.py  test_logger.py  test_parser.py  test_proxy.py  test_proxy_main.py  test_proxy_transparency.py  test_proxy_unit.py  test_runner.py  test_runner_extended.py  test_server_functions.py  test_servers.py  test_servers_main.py
(+63 files in other folders)
