[project]
name = "mcp-detection-blindness"
version = "0.1.0"
description = "Empirical security research measuring detection blindness in MCP tool sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "cryptography>=44.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "mcp[cli]>=1.26.0",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.20.0",
    "pandas>=3.0.2",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "DTZ", "ISC", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002", "SLF001", "ANN401", "N806", "TC002", "TC003", "F841", "E501"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src", "experiments"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
